<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title_film_list_fragment"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_internet"
            app:srcCompat="@drawable/ic_no_internet_connection"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_image_button"
            app:srcCompat="@drawable/ic_search"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_of_Wrong"
            android:text="@string/text_of_Wrong"
            android:textSize="14sp"
            android:textColor="#0094FF"
            android:layout_margin="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/no_internet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reload"
            android:text="@string/TryAgain"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_of_Wrong"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:backgroundTint ="#0094FF"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>