<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/title_film_list_fragment"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_image_button"
            app:srcCompat="@drawable/ic_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/favorite_button"
            android:layout_margin="8dp"
            app:layout_constraintVertical_bias="0"
            tools:listitem="@layout/card_of_film"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/popular_button"
            android:text="@string/popular"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/favorite_button"
            android:textSize="14sp"
            android:textColor="#0094FF"
            android:backgroundTint ="#DEEFFF"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorite_button"
            android:text="@string/favorite"
            android:textAllCaps="false"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/popular_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:backgroundTint ="#0094FF"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_picture"
            app:srcCompat="@drawable/ic_loading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/favorite_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>